Fixed an issue the "today" button can not be wrapped by a spacial div element.

--- a/html/scss/fullcalendar/fullcalendar.scss
+++ b/html/scss/fullcalendar/fullcalendar.scss
@@ -100,6 +100,13 @@ $bgsat: #f8ffff;
 }
 
 // --------------------------------------------------------------------
+// View
+// --------------------------------------------------------------------
+.fc .fc-toolbar-chunk h2 {
+  display: none;
+}
+
+// --------------------------------------------------------------------
 // Cal Item Icons
 // --------------------------------------------------------------------
 .calitem {
